--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,7 +24,7 @@
   line-height: 1.6;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  scroll-padding-top: 80px;
+  scroll-padding-top: 0px;
 }
 
 html, body {
